removed classes l3g and lsm303

--- a/docs/latex/class_zumo32_u4_proximity_sensors.tex
+++ b/docs/latex/class_zumo32_u4_proximity_sensors.tex
@@ -385,7 +385,7 @@ Definition at line 115 of file Zumo32\+U4\+Proximity\+Sensors.\+cpp.
 \index{Zumo32\+U4\+Proximity\+Sensors@{Zumo32\+U4\+Proximity\+Sensors}!read@{read}}
 \index{read@{read}!Zumo32\+U4\+Proximity\+Sensors@{Zumo32\+U4\+Proximity\+Sensors}}
 \subsubsection{\texorpdfstring{read()}{read()}}
-{\footnotesize\ttfamily void Zumo32\+U4\+Proximity\+Sensors\+::read (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Zumo32\+U4\+Proximity\+Sensors\+::read (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 
 
