--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -84,7 +84,7 @@ For complete documentation, see \href{https://pololu.github.io/zumo-32u4-arduino
 \begin{DoxyItemize}
 \item 1.\+2.\+0 (2020-\/09-\/11)\+: Added a \hyperlink{class_zumo32_u4_i_m_u}{Zumo32\+U4\+I\+MU} class that abstracts some details of the inertial sensors and supports different I\+MU types. The examples have been updated to use this class.
 \item 1.\+1.\+4 (2017-\/07-\/17)\+: Fixed a bug that caused errors from the right encoder to be reported as errors from the left encoder.
-\item 1.\+1.\+3 (2016-\/10-\/12)\+: Fixed a bug that caused the buzzer\textquotesingle{}s {\ttfamily is\+Playing} method to malfunction sometimes when link time optimization is enabled. Also incorporated some minor fixes to the \hyperlink{class_q_t_r_sensors}{Q\+T\+R\+Sensors} and \hyperlink{class_l_s_m303}{L\+S\+M303} libraries.
+\item 1.\+1.\+3 (2016-\/10-\/12)\+: Fixed a bug that caused the buzzer\textquotesingle{}s {\ttfamily is\+Playing} method to malfunction sometimes when link time optimization is enabled. Also incorporated some minor fixes to the \hyperlink{class_q_t_r_sensors}{Q\+T\+R\+Sensors} and L\+S\+M303 libraries.
 \item 1.\+1.\+2 (2016-\/03-\/14)\+: Updated the Demo example so it can compile in Arduino 1.\+6.\+7.
 \item 1.\+1.\+1 (2015-\/09-\/01)\+: Moved the library out of the a-\/star repository into its own repository. Added Demo example.
 \item 1.\+1.\+0 (2015-\/05-\/06)\+: Updated Fast\+G\+P\+IO to version 1.\+0.\+2. Fixed a bug in \hyperlink{class_zumo32_u4_proximity_sensors}{Zumo32\+U4\+Proximity\+Sensors} where the wrong array length was used. Added five demos\+: Rotation\+Resist, Face\+Uphill, Remote\+Control, Balancing, and Sumo\+Proximity\+Sensors.
